package org.game.candy.program;

public enum CandyType {
    CARAMELS, CHOCOLATE, GUMMIES, OTHER
}
