package org.game.candy.program;

// TODO GeneralFunctions
public class GeneralFunctions {
    public void quitGame() {
        // TODO finish implementing quit
    }

    public void cancel() {
        // cancel action and return to home screen -> bottom navigation: buy, sell, travel..., instead of select Candy or Location when in buy or travel mode we cancel this
    }
}
