package org.game.candy.program;

public interface Tradable {
    public void setPrice();
    public int getPrice();
}
