package org.game.candy.program.candies;

import org.game.candy.program.Candy;

public class Skittles extends Candy {
}
