package org.game.candy.program.locations;

import org.game.candy.program.Location;

public class Germany extends Location {
    public void setBank() {
        hasBank = true;
    }
}
