package org.game.candy.program.locations;

import org.game.candy.program.Location;

public class Japan extends Location {
}
