package org.game.candy.program.locations;

import org.game.candy.program.Location;

public class Swiss extends Location {
}
